Refactor: Update cache manager to use custom settings cache builder